--- a/app/views/application/index.html.haml
+++ b/app/views/application/index.html.haml
@@ -1,19 +1,17 @@
+
+%video{autoplay: "autoplay", loop: "loop", preload: "auto", poster: "assets/poster.jpg", id: "bgvid"}
+  %source{src:"assets/Paris-P1-0.webm", type:"video/webm"}
+  %source{src:"assets/Paris-P1-1.mp4", type: "video/mp4"}
+
 .row
   .large-12.columns
-    %h1.text-center{style: "font-family: 'Roboto Condensed', sans; font-size: 3.5em; padding-top:30px; font-weight: bold; line-height: 1em;"}
-      Great food
-      %br
-      discovered       
-      %br
-      for you
+    %h1.text-center{style: "font-family: 'Roboto Condensed', sans; font-size: 3.5em; padding-top:30px; font-weight: bold; color: white"}
+      SAVING BETTER
 
-.row{style: "padding-top:30px;"}
-  .large-10.large-offset-2.columns
-    %h3 Your source for local great food recommendations
-    %p Emplary does the searching, you do the eating.
-  .large-10.large-offset-2.columns
-    %h3 Unbiased and convenient 
-    %p Emplary never takes fees for recommendations.
-  .large-10.large-offset-2.columns
-    %h3 Based on the latest health research 
-    %p Emplary tracks developments, so you don't have to.  Emplary supports <a href="http://nusi.org" target="_blank">NuSI</a>.
+.row
+  .large-12.columns
+    %h3.text-center Your source for local great food recommendations
+    %p.text-center Emplary does the searching, you do the eating.
+ 
+
+
