--- a/app/views/layouts/_topbar.html.haml
+++ b/app/views/layouts/_topbar.html.haml
@@ -5,8 +5,8 @@
     %li.name
       %h1
         %a{:href => "/"} 
-          Fundwise
-          %span{style: "font-size: 0.5em; color: #666"}  alpha
+          fundwise
+          / %span{style: "font-size: 0.5em; color: #666"}  alpha
     %li.toggle-topbar.menu-icon
       %a{href: "/"}
         Menu
@@ -23,6 +23,6 @@
     / - else
     %ul.right
       %li
-        %a{:href => "/#discover"} GET STARTED
+        %a{:href => "/"} GET STARTED
       %li
-        %a{:href => "/sessions/new"} SIGN IN
+        %a{:href => "/"} SIGN IN
