--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,7 +5,7 @@
     %meta{name: "description", content: "Find out how Fundwise can help you live a healthy life worth living."}
     %meta{name: "viewport", content: "width=device-width, initial-scale=1.0"}
     %link{href: "/assets/favicon.ico", rel: "shortcut icon"}
-    %title="Fundwise"
+    %title="fundwise"
     = stylesheet_link_tag  "application", media: "all", "data-turbolinks-track" => true 
     = javascript_include_tag "vendor/modernizr"
     = javascript_include_tag "application", "data-turbolinks-track" => true 
