--- a/app/views/application/index.html.haml
+++ b/app/views/application/index.html.haml
@@ -5,13 +5,15 @@
 
 .row
   .large-12.columns
-    %h1.text-center{style: "font-family: 'Roboto Condensed', sans; font-size: 3.5em; padding-top:30px; font-weight: bold; color: white"}
-      SAVING BETTER
-
+    %h1.text-center{style: "font-family: 'Roboto Condensed', sans; font-size: 3.95em; padding-top:50px; font-weight: bold"}
+      INVESTING BETTER
+    %p.text-center Low cost investment accounts with no extra fees or hidden expenses
 .row
-  .large-12.columns
-    %h3.text-center Your source for local great food recommendations
-    %p.text-center Emplary does the searching, you do the eating.
- 
+  .large-11.large-offset-1.columns
+    %ul.inline-list.text-center
+      %li We pick up the phone when you call. 
+      %li We believe in earning your trust.
+      %li We believe in a better way to do investment.
+
 
 
