--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -1,13 +1,15 @@
-%div#footer.row{style: "padding-top: 50px"}
+%div#footer.row
   .large-12.columns
     .row
       .large-6.columns
-        %p &copy; 2014 All rights reserved.
-      .large-6.columns
-        %ul.inline-list.right
-          %li
-            %a{:href => "#"} Facebook
-          %li
-            %a{:href => "#"} Twitter
-          %li
-            %a{:href => "terms"} Terms of Use
+        %p
+          %small 
+            &copy; 2015 All rights reserved.
+      / .large-6.columns
+      /   %ul.inline-list.right
+      /     %li
+      /       %a{:href => "#"} Facebook
+      /     %li
+      /       %a{:href => "#"} Twitter
+      /     %li
+      /       %a{:href => "terms"} Terms of Use
