--- a/app/views/layouts/_topbar.html.haml
+++ b/app/views/layouts/_topbar.html.haml
@@ -1,28 +1,41 @@
 
--# .contain-to-grid.sticky
-%nav.top-bar{"data-topbar" => true}
+-# .contain-to-grid.sticky 
+%nav.top-bar{"data-topbar" => true, "role" => "navigation", "style" => "margin-top: 20px;"}
   %ul.title-area
     %li.name
       %h1
         %a{:href => "/"} 
           fundwise
-          / %span{style: "font-size: 0.5em; color: #666"}  alpha
     %li.toggle-topbar.menu-icon
-      %a{href: "/"}
-        Menu
+      %a{href: "#"}
+        %span 
   %section.top-bar-section
-    / - if user_signed_in?
-    /   %ul.right
-    /     %li
-    /       %a{:href => "/#discover"} GET STARTED
-    /     %li
-    /       = link_to "MY PROFILE ", edit_user_registration_path
-            
-    /     %li
-    /       = link_to "SIGN OUT", destroy_user_session_path, method: :delete
-    / - else
     %ul.right
       %li
-        %a{:href => "/"} GET STARTED
-      %li
-        %a{:href => "/"} SIGN IN
+        %a{:href => "#"} GET STARTED
+      %li.divider
+      %li.has-dropdown
+        %a{:href => "#"} FOLLOW
+        %ul.dropdown
+          %li
+            %a{:href => "#"}             
+              %i.fi-social-facebook 
+              Facebook
+          %li
+            %a{:href => "#"} 
+              %i.fi-social-twitter 
+              Twitter
+      %li.divider
+      %li.has-form
+        %label
+          %small 
+            We never share your email without your consent.
+        %form{"data-abide" => ""}
+          .row.collapse
+            .large-7.small-8.columns
+              %input{type: "email", required: "", placeholder: "e-mail"}
+              %small.error
+                An email is required.
+            .large-5.small-4.columns
+              %button.expand.button{type: "submit"}
+                Get updates
