--- a/app/views/application/index.html.haml
+++ b/app/views/application/index.html.haml
@@ -5,9 +5,15 @@
 
 .row
   .large-12.columns
-    %h1.text-center{style: "font-family: 'Roboto Condensed', sans; font-size: 3.95em; padding-top:50px; font-weight: bold"}
+    %h1.text-center{style: "font-family: 'Roboto Condensed', sans; font-size: 3.95em; padding-top:60px; font-weight: bold"}
       INVESTING BETTER
+.row
+  .large-6.large-offset-3.columns
+    %hr{style: "border: 1px solid #008CBA"}
+.row
+  .large-12.columns    
     %p.text-center Low cost investment accounts with no extra fees or hidden expenses
+
 .row
   .large-11.large-offset-1.columns
     %ul.inline-list.text-center
