--- a/app/views/layouts/_topbar.html.haml
+++ b/app/views/layouts/_topbar.html.haml
@@ -19,11 +19,11 @@
         %ul.dropdown
           %li
             %a{:href => "#"}             
-              %i.fi-social-facebook 
+              %i.fi-social-facebook{style: "font-size: 1.5em;"}
               Facebook
           %li
             %a{:href => "#"} 
-              %i.fi-social-twitter 
+              %i.fi-social-twitter{style: "font-size: 1.5em;"}
               Twitter
       %li.divider
       %li.has-form
